upd: some bug fixed
